# Generic

./: CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
include/Generic/: Generic.h
include/Generic/Core/: API.txt  Logger.h
include/Generic/ECS/: API.txt  Archetype.h  ArchetypeManager.h  Component.h  ComponentManager.h  EntityManager.h  PoolAllocator.h  System.h  SystemManager.h
include/Generic/Util/: API.txt  NameAllocator.h  RTTI.h  Service.h  ServiceLocator.h  Util.h  VLUI64.h
src/ECS/: Archetype.cpp  ArchetypeManager.cpp  ComponentManager.cpp  EntityManager.cpp  PoolAllocator.cpp  SystemManager.cpp
src/Util/: NameAllocator.cpp  RTTI.cpp  ServiceLocator.cpp  Util.cpp  VLUI64.cpp
